--- a/manifest.json
+++ b/manifest.json
@@ -3,20 +3,13 @@
   "name": "Website Blocker",
   "version": "2.0",
   "description": "Block distracting websites",
-  "permissions": [
-    "declarativeNetRequest",
-    "storage",
-    "identity"
-  ],
-  "host_permissions": [
-    "<all_urls>",
-    "https://your-auth-server.com/*"
-  ],
+  "permissions": ["declarativeNetRequest", "storage", "identity"],
+  "host_permissions": ["<all_urls>", "http://localhost:5000/api/auth/login"],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://your-auth-server.com"
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' http://localhost:5000"
   },
   "action": {
-    "default_popup": "welcome.html",
+    "default_popup": "auth.html",
     "default_title": "Website Blocker"
   },
   "background": {
